--- a/backup/ms/search_engine_ui/requirements.txt
+++ b/backup/ms/search_engine_ui/requirements.txt
@@ -1,6 +1,7 @@
-beautifulsoup4==4.6.0
-requests==2.18.4
-pika==1.2.0
+flask==0.12.2
+gunicorn==19.7.1
 structlog==17.2.0
 pymongo==3.5.1
+requests==2.18.4
 prometheus_client==0.1.0
+uuid
