--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,22 +6,22 @@ services:
     restart: always
     container_name: mongodb
     volumes:
-      - ./services/db/store:/data/db
+      - mongo_db:/data/db
     ports:
       - 27017:27017
     networks:
       - app
 
   rabbitmq:
-    image: rabbitmq:3-management-alpine
+    image: rabbitmq:3.9-management
     restart: always
     container_name: rabbitmq
     environment:
       - RABBITMQ_DEFAULT_USER=crawler
       - RABBITMQ_DEFAULT_PASS=123456789
     volumes:
-      - ./services/rabbitmq/data/:/var/lib/rabbitmq/
-      - ./services/rabbitmq/log/:/var/log/rabbitmq
+      - rabbitmq_data:/var/lib/rabbitmq/
+      - rabbitmq_log:/var/log/rabbitmq
     ports:
       - 5672:5672
       - 15672:15672
@@ -30,6 +30,7 @@ services:
 
   crawler:
     image: seeker00837149/crawler
+    restart: on-failure
     container_name: crawler
     environment:
       - MONGO=mongodb
@@ -40,19 +41,34 @@ services:
       - RMQ_PASSWORD=123456789
       - CHECK_INTERVAL=20
       - EXCLUDE_URLS=.*github.com
+    ports:
+      - 8000:8000
+    depends_on:
+      - mongodb
+      - rabbitmq
     networks:
       - app
 
   ui:
     image: seeker00837149/web_ui
+    restart: on-failure
     container_name: ui
     environment:
       - MONGO=mongodb
       - MONGO_PORT=27017
     ports:
       - 8080:8000
+    depends_on:
+      - mongodb
+      - crawler
     networks:
       - app
 
+volumes:
+  mongo_db:
+  rabbitmq_data:
+  rabbitmq_log:
+
 networks:
   app:
+    driver: bridge
