--- a/ansible/playbooks/docker_install.yml
+++ b/ansible/playbooks/docker_install.yml
@@ -12,6 +12,7 @@
         - curl
         - software-properties-common
         - python3-pip
+        - python-pip  
         - gnupg
         state: latest
 
@@ -43,3 +44,7 @@
         url : https://github.com/docker/compose/releases/download/1.23.1/docker-compose-linux-x86_64
         dest: /usr/local/bin/docker-compose
         mode: 'u+x,g+x'
+  
+    - name: Install Docker Compose module for Python
+      pip:
+        name: docker-compose        
