--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -2,7 +2,9 @@
 global:
   scrape_interval: '5s'
 rule_files:
-  - "alert.rules"
+  - "prometheus/rule/alert.rules"
+  - "prometheus/rule/swarm_node.rules.yml"
+  - "prometheus/rule/swarm_task.rules.yml"    
 
 scrape_configs:
   - job_name: 'prometheus'
@@ -19,6 +21,12 @@ scrape_configs:
     static_configs:
       - targets:
         - 'crawler:8000'
+
+  - job_name: 'cadvisor'
+    static_configs:
+      - targets:
+        - 'cadvisor:8080'
+
 alerting:
   alertmanagers:
     - static_configs:
