Added docker-stack.yml and ansible logging role for deploy fuentd, kibana and elasticsearch

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -35,6 +35,18 @@
   roles:
     - node-label-mon 
 
+- name: Network add
+  hosts: manager
+  become: true
+  roles:
+    - network-add
+
+- name: Deploy logging 
+  hosts: monitoring
+  become: true
+  roles:
+    - log-deploy
+
 - name: Deploy applications
   hosts: manager
   become: true
