--- a/ansible/roles/app-deploy/tasks/main.yml
+++ b/ansible/roles/app-deploy/tasks/main.yml
@@ -1,18 +1,18 @@
 ---
 - name: Create a directory if it does not exist
   ansible.builtin.file:
-    path: /home/ubuntu/ms
+    path: /home/ubuntu/app
     state: directory
     mode: '0755'
 
 - name: Copy directory of microservices
   copy:
-    src: ../docker/docker-stack.yml
-    dest: /home/ubuntu/ms
+    src: ../app/docker-stack.yml
+    dest: /home/ubuntu/app
 
 - name: Deploy stack from a compose file
   docker_stack:
     state: present
     name: crawler
     compose:
-    - /home/ubuntu/ms/docker-stack.yml
+    - /home/ubuntu/app/docker-stack.yml
