Added description to README.md

--- a/ansible/roles/gitlab-runner-install/tasks/main.yml
+++ b/ansible/roles/gitlab-runner-install/tasks/main.yml
@@ -1,7 +1,5 @@
-- name: "Install gitlab runner"
-  command: |
-    curl -LJO "https://gitlab-runner-downloads.s3.amazonaws.com/latest/deb/gitlab-runner_amd64.deb"
-    dpkg -i gitlab-runner_amd64.deb    
+- name: Install gitlab runner
+  apt: name=gitlab-runner state=latest update_cache=yes
 
 - name: "Register runner"
   command: |
