--- a/app/docker-stack.yml
+++ b/app/docker-stack.yml
@@ -49,6 +49,8 @@ services:
       - EXCLUDE_URLS=.*github.com
     ports:
       - 8000:8000
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}        
     networks:
       - crawler_app
     logging:
@@ -69,6 +71,8 @@ services:
       - MONGO_PORT=27017
     ports:
       - 80:8000
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}        
     networks:
       - crawler_app
     logging:
